Added a notifier and some other changes

--- a/views/includes/popup.ejs
+++ b/views/includes/popup.ejs
@@ -8,10 +8,10 @@
         <div class="body-dialog">
         <h1>Payment was <span>successfull</span>!</h1>
         <p>
-            <span style="color:red;">Note!</span> Please, don't delete <span style="color:red;">cookie</span> for this website not to loose access for this content.
+            <span style="color:red;">Note!</span> Please, don't delete <span style="color:red;">cookie</span> for this website in order not to loose the access for this content.
         </p>
         <p>
-            Make sure that your browser don't delete cookie after closing as well. 
+            Make sure that your browser doesn't delete the cookie after closing as well. 
         </p>
         </div>
         <div class="ok-dialog"><i class="icon-ok-sign fa-solid fa-circle-check"></i></div>
@@ -23,7 +23,8 @@
         <div class="body-dialog">
         <h1 style="color:red;">Error! Payment failed!</h1>
         <p style="font-size: 18px;">
-            Please, <a href="mailto:test@gmail.com">click</a> to send us email regarding your problem.
+            We have notified our developers about this issue. We will contact you via email as soon as the service is up and running.<br>
+            Apologies for any inconvenience caused!
         </p>
         </div>
         <div class="ok-dialog"><i class="icon-ok-sign fa-solid fa-circle-check"></i></div>
