Added flash library

--- a/views/includes/popup.ejs
+++ b/views/includes/popup.ejs
@@ -8,10 +8,10 @@
         <div class="body-dialog">
         <h1>Payment was <span>successfull</span>!</h1>
         <p>
-            <span style="color:red;">Note!</span> Please, don't delete <span style="color:red;">cookie</span> for this website in order not to loose the access for this content.
+            <span style="color:red;">Note!</span> Please, don't delete <span style="color:red;">the cookie</span> for this website in order not to loose the access for this content.
         </p>
         <p>
-            Make sure that your browser doesn't delete the cookie after closing as well. 
+            Make sure that your browser doesn't delete the cookie after its closing as well. 
         </p>
         </div>
         <div class="ok-dialog"><i class="icon-ok-sign fa-solid fa-circle-check"></i></div>
