--- a/views/video-page.ejs
+++ b/views/video-page.ejs
@@ -17,6 +17,7 @@
                     <div id="content-padlock">
                         <strong>You don't have access to this content</strong>
                         <img src="/img/padlock-content.svg" alt="You don't have access to this content"/>
+                        
                     </div>
                 <% } %>
 
@@ -25,7 +26,7 @@
             <!-- Show paying button if user don't have access to this video -->
             <% if (typeof enabled != "undefined" && enabled === 0) { %>
 
-                <form action="/charge" method="POST">
+                <form action="/charge" method="POST" id="payForThat">
                     
                     <input type="hidden" id="productId" name="productId" value="<%= video.entityId %>">
                     <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="<%= stripePublishableKey %>"
